# STM32F4-bringup-CMake

./: .gitignore  CMakeLists.txt  Dockerfile  NucleoF4Demo Debug.launch  NucleoF4Demo.ioc  README.md  docker-compose.yml  docker-entrypoint.sh  toolchain-STM32F4.cmake
.github/workflows/: java-ci-build.yml  main-docker-build.yml
Core/Inc/: eth.h  stm32f4xx_hal_conf.h
Core/Src/: eth.c  gpio.c  main.c  usart.c  usb_otg.c
Debug/: NucleoF4Demo.elf  NucleoF4Demo.list  NucleoF4Demo.map  makefile  objects.list
Debug/Core/Src/: eth.cyclo  eth.d  eth.su  gpio.d  main.cyclo  main.d  main.su  subdir.mk  usart.cyclo  usart.d  usb_otg.cyclo  usb_otg.d  usb_otg.su
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Utils/: Calculator.h
Utils/sources/: Calculator.cpp
actions/docker-action/: Dockerfile  README.md  entrypoint.sh
actions/unit-test-docker-action/: Dockerfile  README.md  action.yml  entrypoint.sh
test/: CMakeLists.txt  run-unit-tests.sh
test/Utils/: CMakeLists.txt
